<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:contentDescription="@string/image_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/smartphone"
        android:background="#ff000000"
        android:clickable="false"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_text"
        android:id="@+id/info"
        android:layout_gravity="center_horizontal|top"
        android:textColor="#ffffffff"
        android:textSize="17sp"
        android:layout_margin="10dp"
        android:visibility="invisible" />

    <Button
        android:layout_width="77dp"
        android:layout_height="59dp"
        android:text="@string/ok_button"
        android:id="@+id/button"
        android:layout_gravity="end|center_vertical"
        android:textSize="40sp"
        android:background="#ff9fa3a0"
        android:onClick="startARActivity"
        android:layout_margin="10dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_credits"
        android:id="@+id/image_credit"
        android:layout_gravity="end|bottom"
        android:textColor="#ffffffff"
        android:layout_margin="10dp"
        android:visibility="invisible" />
</FrameLayout>
